# actantdb

./: .antigravityrules  .cursorrules  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CLOUD_GAPS.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DEVX_GAPS.md  GAPS.md  GATES.md  ISSUES_DRAFT.md  LICENSE  NOTICE  PIVOT.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SPECS_STATUS.md  STORAGE_AUDIT.md  TESTING.md  UI_AUTH_DESIGN.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  premortem-report-20260517-133422.html  premortem-transcript-20260517-133422.md  rust-toolchain.toml  rustfmt.toml  typedoc.json  waw.md
bench/: Cargo.toml
bench/benches/: command_dispatch.rs  http_command.rs  storage_append.rs
bench/box/: README.md  package.json  tsconfig.json
bench/box/results/: burst-1779215760.json  sequential-1779215772.json  staggered-1779215778.json  staggered-1779216147.json
bench/box/src/: composite.ts  index.ts  runner.ts  stats.ts
bench/scenarios/: main.rs
bench/src/: lib.rs
crates/actant-auth/: Cargo.toml
crates/actant-auth/src/: lib.rs  link.rs  oidc.rs  password.rs  session.rs
crates/actant-auth/tests/: link_code_generation.rs  rs256_round_trip.rs
crates/actant-cli/: Cargo.toml  README.md
crates/actant-cli/src/: cli_errors.rs  lib.rs  main.rs  predicate_parse.rs  telemetry.rs
crates/actant-cli/tests/: backup_restore.rs  subprocess.rs
crates/actant-command/: Cargo.toml  README.md
crates/actant-command/src/: cache.rs  kernel.rs  lib.rs  models.rs  prompts.rs
crates/actant-command/tests/: alpha_demo.rs  cache_cross_actor_property.rs  kernel_latency_budget.rs  models_deterministic_selection.rs  no_io_in_transaction.rs  prompts_registry_round_trip.rs  spec_03_verification.rs  spec_19_verification.rs
crates/actant-compensation/: Cargo.toml
crates/actant-compensation/src/: lib.rs
crates/actant-context/: Cargo.toml  README.md
crates/actant-context/src/: lib.rs
crates/actant-context/tests/: spec_06_verification.rs
crates/actant-contracts/: Cargo.toml  README.md
crates/actant-contracts/src/: cache.rs  events.rs  index.rs  lib.rs  models.rs  policy.rs  replay.rs  schema.rs  sdk_codegen.rs
crates/actant-contracts/templates/: client.py  client.swift  client.ts
crates/actant-contracts/tests/: snapshot.rs  spec_09_verification.rs
crates/actant-drift/: Cargo.toml
crates/actant-drift/src/: lib.rs
crates/actant-embed/: Cargo.toml  README.md
crates/actant-embed/src/: lib.rs
crates/actant-embedders/: Cargo.toml  README.md
crates/actant-embedders/src/: lib.rs  registry.rs  rerank.rs  space.rs  sparse.rs
crates/actant-embedders/tests/: bm25_basic.rs  cross_space_rejected.rs  openai_mocked.rs  registry_round_trip.rs  reranker_identity.rs
crates/actant-index/: Cargo.toml  README.md
crates/actant-index/src/: lib.rs
crates/actant-index/tests/: recall_at_5_smoke.rs  spec_15_verification.rs
crates/actant-ingress/: Cargo.toml  README.md
crates/actant-ingress/src/: lib.rs
crates/actant-ingress/tests/: idempotent_webhook.rs
crates/actant-kernel/: Cargo.toml  README.md
crates/actant-kernel/src/: lib.rs
crates/actant-kernel/tests/: latency_budget.rs  no_io_in_transaction.rs  spec_19_verification.rs
crates/actant-lock/: Cargo.toml  README.md
crates/actant-lock/src/: lib.rs
crates/actant-memory/: Cargo.toml  README.md
crates/actant-memory/src/: index.rs  lib.rs
crates/actant-memory/tests/: recall_at_5.rs  spec_15_verification.rs
crates/actant-napi/: Cargo.toml  README.md
crates/actant-napi/src/: lib.rs
crates/actant-objectstore/: Cargo.toml
crates/actant-objectstore/examples/: actantdb_objectstore.rs
crates/actant-objectstore/src/: fs.rs  ipfs.rs  layered.rs  lib.rs  mem.rs  s3.rs
crates/actant-objectstore/tests/: filesystem_roundtrip.rs  ipfs_provider.rs  layered_dispatch.rs  memory_isolation.rs  s3_provider.rs
crates/actant-prompts/: Cargo.toml  README.md
crates/actant-prompts/src/: lib.rs
crates/actant-prompts/tests/: registry_round_trip.rs
crates/actant-protocol/: Cargo.toml  README.md
crates/actant-protocol/src/: lib.rs
crates/actant-protocol/tests/: spec_16_verification.rs
crates/actant-reliability/: Cargo.toml
crates/actant-reliability/src/: circuit.rs  ingress.rs  lib.rs  lock.rs  throttle.rs
crates/actant-reliability/tests/: algorithm_pos_neg.rs  check_latency_bench.rs  idempotent_webhook.rs  spec_18_verification.rs
crates/actant-replay/: Cargo.toml  README.md
crates/actant-replay/src/: conflict.rs  lib.rs
crates/actant-replay/tests/: conflict_resolve.rs  local_only_mode.rs  replay_isolation.rs  snapshot_purge_orphans.rs  spec_07_verification.rs  three_named_scenarios.rs
crates/actant-runtime/: Cargo.toml
crates/actant-runtime/src/: cache.rs  lib.rs  models.rs  prompts.rs  protocol.rs  trace.rs
crates/actant-runtime/tests/: cross_actor_property.rs  deterministic_selection.rs  emit_site_coverage.rs  registry_round_trip.rs  spec_16_verification.rs  spec_17_verification.rs
crates/actant-schema-dsl/: Cargo.toml  README.md
crates/actant-schema-dsl/src/: lib.rs
crates/actant-schema-dsl/tests/: generators_roundtrip.rs  parse_fixtures.rs
crates/actant-sdk-codegen/: Cargo.toml  README.md
crates/actant-sdk-codegen/src/: lib.rs  main.rs
crates/actant-sdk-codegen/templates/: client.py  client.swift  client.ts
crates/actant-server/: Cargo.toml  README.md  openapi.yaml
crates/actant-server/assets/: link.html  login.html
crates/actant-server/src/: auth_routes.rs  auto_rest.rs  graphql_api.rs  lib.rs  prom.rs  pubsub_routes.rs  schema_introspect.rs
crates/actant-server/tests/: alpha_demo_e2e.rs  auth.rs  csrf_required_on_mutate.rs  entities_endpoint.rs  health_probes.rs  http_smoke.rs  link_code_flow.rs  memories_endpoint.rs  memory_conflicts_endpoint.rs  password_set_and_login.rs  permissions_endpoint.rs  rate_limit.rs  replay_endpoint.rs  tls.rs  (+6 more)
crates/actant-storage/: Cargo.toml  README.md
crates/actant-subscribe/: Cargo.toml  README.md
crates/actant-sync/: Cargo.toml  README.md
crates/actant-templates/: Cargo.toml  README.md
(+863 files in other folders)
