[workspace]
resolver = "2"
members = [
    # Phase 1 core
    "crates/actant-core",
    "crates/actant-storage",
    "crates/actant-command",
    "crates/actant-policy",
    "crates/actant-effects",
    "crates/actant-context",
    "crates/actant-memory",
    "crates/actant-flow",
    "crates/actant-replay",
    "crates/actant-subscribe",
    "crates/actant-server",
    "crates/actant-cli",
    "crates/actant-sdk-codegen",
    # Phase 2 — workers
    "crates/actant-worker-protocol",
    "crates/actant-workers",
    # Phase 3 — context/memory companions
    "crates/actant-embed",
    "crates/actant-capsule",
    "crates/actant-trust",
    # Phase 4 — triggers + evals
    "crates/actant-trigger",
    "crates/actant-eval",
    # Phase 6 — cluster
    "crates/actant-sync",
    "crates/actant-audit-export",
    "crates/actant-objectstore",
    # CLI product surface (Phase 1+, expanded through Phase 4)
    "crates/actant-templates",
    "crates/actant-schema-dsl",
    # AI-native retrieval + protocols + observability (Phase 1-4) — the
    # five small observability/protocol crates (prompts, models, cache,
    # trace, protocol) were merged into a single feature-flagged crate.
    "crates/actant-index",
    "crates/actant-embedders",
    "crates/actant-runtime",
    # Reliability primitives (Phase 1+) — merged into a single crate with
    # one feature flag per primitive (throttle/circuit/lock/ingress).
    "crates/actant-reliability",
    # Hot-path coordinator (Phase 1, lands with the core kernel discipline)
    "crates/actant-kernel",
    # F2/F3 prevention (post-pivot, 2026-05-17) — TS-native default + contract-first build
    "crates/actant-contracts",   # single source of truth for every public type
    # Phase 6 — cloud / team
    "crates/actant-auth",        # OIDC/JWT session minting
    "crates/actant-tenant",      # multi-tenant boundary helpers
    "crates/actant-drift",       # autonomy-drift detection
    "crates/actant-compensation", # compensation-plan generator
    # Benchmarks (cross-phase track per /specs/11-roadmap.md)
    "bench",
    # First-class Rust client SDK (closes GAPS #2 + #23).
    "sdks/rust",
    # All-in-one umbrella crate (closes the "one dep for everything" UX gap).
    "crates/actantdb",
    # iOS / Swift / Kotlin embeddable FFI surface (uniffi-rs). Closes GAPS #39.
    "crates/actant-ffi",
]

[workspace.package]
version = "0.0.15"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/Prompt-or-Die-Labs/actantdb"
authors = ["The ActantDB Authors"]

[workspace.dependencies]
# Internal crates
actant-core         = { path = "crates/actant-core",         version = "0.0.15" }
actant-storage      = { path = "crates/actant-storage",      version = "0.0.15" }
actant-cli          = { path = "crates/actant-cli",          version = "0.0.15" }
actant-command      = { path = "crates/actant-command",      version = "0.0.15" }
actant-policy       = { path = "crates/actant-policy",       version = "0.0.15" }
actant-effects      = { path = "crates/actant-effects",      version = "0.0.15" }
actant-context      = { path = "crates/actant-context",      version = "0.0.15" }
actant-memory       = { path = "crates/actant-memory",       version = "0.0.15" }
actant-flow         = { path = "crates/actant-flow",         version = "0.0.15" }
actant-replay       = { path = "crates/actant-replay",       version = "0.0.15" }
actant-subscribe    = { path = "crates/actant-subscribe",    version = "0.0.15" }
actant-server       = { path = "crates/actant-server",       version = "0.0.15" }
actant-sdk-codegen  = { path = "crates/actant-sdk-codegen",  version = "0.0.15" }
actant-worker-protocol = { path = "crates/actant-worker-protocol", version = "0.0.15" }
actant-workers         = { path = "crates/actant-workers",         version = "0.0.15" }
actant-embed        = { path = "crates/actant-embed",        version = "0.0.15" }
actant-capsule      = { path = "crates/actant-capsule",      version = "0.0.15" }
actant-trust        = { path = "crates/actant-trust",        version = "0.0.15" }
actant-trigger      = { path = "crates/actant-trigger",      version = "0.0.15" }
actant-eval         = { path = "crates/actant-eval",         version = "0.0.15" }
actant-sync         = { path = "crates/actant-sync",         version = "0.0.15" }
actant-audit-export = { path = "crates/actant-audit-export", version = "0.0.15" }
actant-objectstore  = { path = "crates/actant-objectstore",  version = "0.0.15" }
actant-templates       = { path = "crates/actant-templates",       version = "0.0.15" }
actant-schema-dsl      = { path = "crates/actant-schema-dsl",      version = "0.0.15" }
actant-index           = { path = "crates/actant-index",           version = "0.0.15" }
actant-embedders       = { path = "crates/actant-embedders",       version = "0.0.15" }
actant-runtime         = { path = "crates/actant-runtime",         version = "0.0.15" }
actant-reliability     = { path = "crates/actant-reliability",     version = "0.0.15", default-features = true }
actant-kernel          = { path = "crates/actant-kernel",          version = "0.0.15" }
actant-contracts       = { path = "crates/actant-contracts",       version = "0.0.15" }
actant-auth            = { path = "crates/actant-auth",            version = "0.0.15" }
actant-tenant          = { path = "crates/actant-tenant",          version = "0.0.15" }
actant-drift           = { path = "crates/actant-drift",           version = "0.0.15" }
actant-compensation    = { path = "crates/actant-compensation",    version = "0.0.15" }
actant-ffi             = { path = "crates/actant-ffi",             version = "0.0.15" }

# External — pinned at workspace level for consistent versions across crates.
anyhow        = "1.0"
thiserror     = "1.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
tokio         = { version = "1.39", features = ["full"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid          = { version = "1.10", features = ["v7", "serde"] }
ulid          = { version = "1.1", features = ["serde"] }
sha2          = "0.10"
hex           = "0.4"
time          = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
sqlx          = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate", "time"] }
axum          = { version = "0.7", features = ["ws", "macros"] }
axum-server   = { version = "0.7", features = ["tls-rustls"] }
tower         = "0.5"
tower-http    = { version = "0.5", features = ["trace", "cors", "limit"] }
clap          = { version = "4.5", features = ["derive", "env"] }
schemars      = "0.8"
async-trait   = "0.1"
futures       = "0.3"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
hmac          = "0.12"
base64        = "0.22"
argon2        = "0.5"
subtle        = "2.5"
rand          = "0.8"
regex         = "1.10"
cron          = "0.12"
rmcp          = "0.1"   # MCP client (Phase 2 worker-mcp); pin reviewed at phase entry
# AI-native + observability (added with specs 15-18)
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = "0.27"
tonic         = "0.12"   # gRPC for OTLP and optional vector backends
half          = "2.4"    # f16 for embedding storage
governor      = "0.7"    # token-bucket rate limiting primitives
moka          = { version = "0.12", features = ["future"] }   # semantic cache
fastembed     = "4"      # local embeddings default (feature-gated)
include_dir   = "0.7"    # compile-time directory embedding (template bundles)
tempfile      = "3"      # transient dirs for tests
bytes         = "1"      # body type for object-store APIs
url           = "2"      # presigned-URL return type
object_store  = { version = "0.11", default-features = false }   # apache/arrow-rs unified object store (S3/GCS/Azure); 0.13 needs rust 1.85
async-graphql      = { version = "=7.0.13", default-features = false, features = ["dynamic-schema"] }   # GraphQL endpoint (DEVX_GAPS X89); 7.0.13 is the highest 7.x against axum 0.7
async-graphql-axum = { version = "=7.0.13", default-features = false }   # axum 0.7 integration for async-graphql
notify        = { version = "6", default-features = false, features = ["macos_fsevent"] }   # cross-platform file watch (used by `actantdb dev`)
rustyline     = { version = "14", default-features = false, features = ["with-file-history"] }   # readline-style REPL for `actantdb shell` and `actantdb sql`
comfy-table   = "7"  # pretty terminal tables for `actantdb sql` etc.
clap_complete = "4.5"  # shell completion generator for `actantdb completions`
# uniffi-rs — Mozilla's foreign-function-interface generator. Powers the iOS
# embedded mode + future Kotlin SDK. Pinned at workspace level so the runtime
# crate (`actant-ffi`) and any future bindgen-host crate use the same minor.
uniffi        = { version = "0.28", default-features = false, features = ["tokio", "cli", "build"] }

# Dev-only (referenced from crate [dev-dependencies] sections)
proptest      = "1.5"    # property-based testing

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Smallest possible binary (use for size-constrained distributions —
# bundling actantdb into a Mac app .app, embedding in an iOS Document
# Picker provider, container image with strict size budget). Trades
# some throughput for a much smaller binary.
# Build: `cargo build --profile release-min -p actant-cli -p actant-server`.
[profile.release-min]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 0
# Line-table debuginfo only (file:line in backtraces) instead of full
# DWARF (which carries every type description and balloons target/ from
# ~3 GB to ~25–30 GB across the workspace). Cuts disk by ~10×. If you
# need full symbols for a debugger session, build that one crate with
# `RUSTFLAGS="-Cdebuginfo=2" cargo build -p <crate>`.
debug = "line-tables-only"
# Don't strip — incremental compilation needs the symbol table.
strip = false
# More codegen units = more parallelism + smaller per-unit caches.
# Default is 256 for dev anyway, but make it explicit so any future
# perf-tuning doesn't accidentally drop this.
codegen-units = 256

# Tests and dev-deps inherit `dev` by default; pin them here so a
# `cargo test --workspace` doesn't unwind into a `dev-rich` profile
# somewhere downstream.
[profile.test]
debug = "line-tables-only"
strip = false

[profile.bench]
debug = "line-tables-only"
