[package]
name = "actant-auth"
description = "ActantDB authentication: OIDC token verification, session minting, role/group resolution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
argon2         = { workspace = true }
async-trait    = { workspace = true }
base64         = { workspace = true }
hex            = { workspace = true }
hmac           = { workspace = true }
jsonwebtoken   = "9"
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
subtle         = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
rsa            = { version = "0.9", features = ["pem"] }
