[package]
name = "actant-command"
description = "ActantDB command engine: typed command registry, validation, dispatch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-contracts = { workspace = true }
actant-storage = { workspace = true }
actant-policy  = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
schemars       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
