[package]
name = "actant-drift"
description = "Autonomy-drift detection: scores sessions on intent-action alignment and writes drift_signal rows when thresholds are crossed."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
ulid           = { workspace = true }
