[package]
name = "actant-embed"
description = "ActantDB vector-store adapter: LanceDB (default), FAISS, Qdrant, Chroma, pgvector, SQLite-vec."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

