[package]
name = "actant-embedders"
description = "Embedder and reranker provider registry: FastEmbed (local), MLX, OpenAI, Voyage, Cohere, Jina, custom OpenAI-compatible."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-embed   = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
hex            = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
reqwest        = { workspace = true, optional = true }
fastembed      = { workspace = true, optional = true }

[features]
default = []
fastembed = ["dep:fastembed"]
sparse-bm25 = []
rerank-local = []
openai = ["dep:reqwest"]
