[package]
name = "actant-kernel"
description = "ActantDB hot-path coordinator: dispatch table, compiled-policy capability tokens, in-memory hot projection tier."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core      = { workspace = true }
actant-storage   = { workspace = true }
actant-policy    = { workspace = true }
actant-command   = { workspace = true }
actant-effects   = { workspace = true }
actant-subscribe = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sqlx             = { workspace = true }
thiserror        = { workspace = true }
time             = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
