[package]
name = "actant-memory"
description = "ActantDB memory lifecycle and provenance."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-contracts = { workspace = true }
actant-embed   = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
ulid           = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
actant-embedders = { workspace = true }
