[package]
name = "actant-objectstore"
description = "Pluggable blob/object storage for ActantDB artifacts (filesystem default; S3 / IPFS opt-in)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# AWS S3 (and any S3-compatible endpoint — MinIO, R2, etc) via apache/arrow-rs
# `object_store`. Off by default so the lean install does not pull AWS deps.
# `reqwest` is required for the presign `Method` type that
# `object_store::signer::Signer::signed_url` consumes.
s3 = ["dep:object_store", "dep:reqwest"]
# IPFS via Kubo's HTTP API. Off by default so the lean install does not pull
# reqwest.
ipfs = ["dep:reqwest"]

[dependencies]
actant-core = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
bytes       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }

# Optional backends — pulled in only when the matching feature is enabled.
object_store = { workspace = true, features = ["aws"], optional = true }
reqwest      = { workspace = true, optional = true, features = ["multipart"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
ulid     = { workspace = true }

[[example]]
name = "actantdb-objectstore"
path = "examples/actantdb_objectstore.rs"
