[package]
name = "actant-protocol"
description = "Protocol adapters: MCP (resources/prompts/tools), A2A (agent-to-agent), AP2 (agent payments)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
reqwest        = { workspace = true }
