[package]
name = "actant-reliability"
description = "Reliability primitives: throttle (token bucket), circuit (breaker), lock (lease-based), ingress (idempotent webhooks)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["throttle", "circuit", "lock", "ingress"]
throttle = []
circuit  = []
lock     = ["dep:sqlx", "dep:ulid"]
ingress  = ["dep:sqlx", "dep:ulid", "dep:reqwest", "dep:hmac", "dep:base64"]

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
sqlx           = { workspace = true, optional = true }
ulid           = { workspace = true, optional = true }
reqwest        = { workspace = true, optional = true }
hmac           = { workspace = true, optional = true }
base64         = { workspace = true, optional = true }
